--- a/scss/4-pages/_home.scss
+++ b/scss/4-pages/_home.scss
@@ -243,6 +243,7 @@
 
     .aboutme__resume {
         display: flex;
+        align-items: center;
         flex-direction: column;
 
         &-btn {
